--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,10 @@ hecs = "0.2"
 shipyard = "0.4"
 specs = {version = "0.16.1", features = ["serde"] }
 specs-derive = "0.4.1"
+enrs = { path = "../enrs", optional = true }
+
+[features]
+enrs-bench = ["enrs"]
 
 [dev-dependencies]
 criterion = "0.3"
